output some bash
Signed-off-by: Mark Kollasch <mkollasch@pivotal.io>

--- a/tasks/scalable-syslog-smoke-test-with-vars.yml
+++ b/tasks/scalable-syslog-smoke-test-with-vars.yml
@@ -24,7 +24,7 @@ run:
   - |
     #!/bin/bash
 
-    set -e
+    set -ex
 
     export CF_PASSWORD=$(bosh int vars-store/$VARS_STORE_FILE --path /cf_admin_password)
 
