--- a/pipelines/pws-us.yml
+++ b/pipelines/pws-us.yml
@@ -216,7 +216,7 @@ jobs:
   - get: scalable-syslog-release
   - get: 1h
     trigger: true
-  - task: v2-drain
+  - task: v2-drain-loggregator
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
     params:
       TEARDOWN: false
@@ -227,6 +227,21 @@ jobs:
       CF_SYSTEM_DOMAIN: run.pivotal.io
       CF_USERNAME: {{pws-username}}
       DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      DRAIN_VERSION: "2.0"
+      DRAIN_TYPE: "syslog"
+      JOB_NAME: "syslog-no-teardown"
+    timeout: 15m
+  - task: v2-drain-cloudops
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      TEARDOWN: false
+      CF_ORG: cf-lamb
+      CF_PASSWORD: {{pws-password}}
+      CF_SPACE: development
+      CF_APP_DOMAIN: cf-tcpapps.io
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
       DRAIN_VERSION: "2.0"
       DRAIN_TYPE: "syslog"
       JOB_NAME: "syslog-no-teardown"
