--- a/tasks/capacity-planning/setup-datadog-event.yml
+++ b/tasks/capacity-planning/setup-datadog-event.yml
@@ -7,7 +7,6 @@ inputs:
 - name: bbl-state
 params:
   DATADOG_API_KEY:
-  DATADOG_APP_KEY:
 run:
   path: bash
   args:
@@ -39,4 +38,4 @@ run:
     }
     EOF
 
-    curl "https://app.datadoghq.com/api/v1/events?api_key=${DATADOG_API_KEY}&application_key=${DATADOG_APP_KEY}" -X POST -H "Content-type: application/json" -d "@/tmp/request-body.json"
+    curl "https://app.datadoghq.com/api/v1/events?api_key=${DATADOG_API_KEY}" -X POST -H "Content-type: application/json" -d "@/tmp/request-body.json"
