Fix json body for capacity planning datadog event
Signed-off-by: Mark Kollasch <mkollasch@pivotal.io>

--- a/tasks/capacity-planning/setup-datadog-event.yml
+++ b/tasks/capacity-planning/setup-datadog-event.yml
@@ -33,7 +33,7 @@ run:
       "tags": [
         "dopplers:$DOPPLER_COUNT",
         "trafficcontrollers:$TC_COUNT",
-        "diego_cells:$DIEGO_CELL_COUNT",
+        "diego_cells:$DIEGO_CELL_COUNT"
       ]
     }
     EOF
