--- a/pipelines/coconut.yml
+++ b/pipelines/coconut.yml
@@ -26,7 +26,7 @@ jobs:
     params:
       CF_ORG: system
       CF_PASSWORD: {{coconut-password}}
-      CF_SPACE: s
+      CF_SPACE: blackbox-testing
       CF_APP_DOMAIN: coconut.cf-app.com
       CF_SYSTEM_DOMAIN: coconut.cf-app.com
       CF_USERNAME: {{coconut-username}}
