--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -254,7 +254,7 @@ jobs:
       BBL_STATE_DIR: gcp/bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml use-4-azs-for-router.yml rlp.yml tcp-routing-gcp.yml datadog-agent.yml scale-to-one-az.yml diego.yml "
+      OPS_FILES: "clients.yml scale-to-one-az.yml use-4-azs-for-router.yml rlp.yml tcp-routing-gcp.yml datadog-agent.yml diego.yml "
       VARS_FILES: "gcp/bbl/vars-files/router.yml"
   - put: deployments-loggregator-with-changes
     params:
