--- a/pipelines/prod.yml
+++ b/pipelines/prod.yml
@@ -23,6 +23,7 @@ resources:
   source:
     uri: git@github.com:pivotal-cf/prod-aws.git
     private_key: {{ci_concourse_github_key}}
+    branch: master
 - name: secrets-prod
   type: git
   source:
@@ -30,6 +31,7 @@ resources:
     private_key: {{ci_concourse_github_key}}
 jobs:
 - name: dry-run
+  serial: true
   plan:
     - aggregate:
       - get: scalable-syslog-release
@@ -49,10 +51,12 @@ jobs:
           source:
             repository: loggregator/base
         inputs:
-          - name: scalable-syslog-release
-          - name: loggregator
-          - name: prod-aws
-          - name: secrets-prod
+        - name: scalable-syslog-release
+        - name: loggregator
+        - name: prod-aws
+        - name: secrets-prod
+        outputs:
+        - name: updated-prod-aws
         params:
           BOSH_CLIENT: {{prod_bosh_client_id}}
           BOSH_CLIENT_SECRET: {{prod_bosh_client_secret}}
@@ -67,21 +71,22 @@ jobs:
               #!/bin/bash
               set -e
 
-              SECRETS_DIR=$PWD/secrets-prod
-
               gem install secrets-sanitizer --no-rdoc --no-ri
 
               function release_version {
                 echo $(bosh int $1 --path=/builds | grep version | cut -d ":" -f 2 | cut -d " " -f 2 | cut -d '"' -f 2 | sort -n | tail -n 1)
               }
 
+              SECRETS_DIR=$PWD/secrets-prod
               CF_VERSION=$(bosh int prod-aws/deployments/cf-cfapps-io2.yml --path=/releases/name=cf/version)
               LOGGREGATOR_VERSION=$(release_version "loggregator/releases/loggregator/index.yml")
               SCALABLE_SYSLOG_VERSION=$(release_version "scalable-syslog-release/releases/scalablesyslog/index.yml")
 
+              echo
               echo "CF Version: $CF_VERSION"
               echo "Loggregator Version: $LOGGREGATOR_VERSION"
               echo "Scalable Syslog Version: $SCALABLE_SYSLOG_VERSION"
+              echo
 
               pushd prod-aws/deployments
                 opsfile=`mktemp`
@@ -102,7 +107,76 @@ jobs:
                 bosh int scalablesyslog.yml -o $opsfile > $manifest
                 mv $manifest scalablesyslog.yml
 
-                desanitize -f -i scalablesyslog.yml -s $SECRETS_DIR/deployments
+                git config user.email "cf-loggregator@pivotal.io"
+                git config user.name "Loggregator CI"
+                git add . --all
+                git commit -m "Updating release versions for scalablesyslog deployment"
 
+                desanitize -f -i scalablesyslog.yml -s $SECRETS_DIR/deployments
                 bosh deploy scalablesyslog.yml -n --dry-run
+
+                git reset --hard
+              popd
+
+              rsync -ac prod-aws/ updated-prod-aws/
+    - put: prod-aws
+      params:
+        repository: updated-prod-aws
+- name: deploy
+  serial: true
+  plan:
+    - aggregate:
+      - get: scalable-syslog-release
+        passed: ["dry-run"]
+      - get: loggregator
+        params:
+          submodules: none
+      - get: prod-aws
+        params:
+          submodules: none
+      - get: secrets-prod
+    - task: diff
+      tags: [ prod ]
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: loggregator/base
+        inputs:
+        - name: scalable-syslog-release
+        - name: loggregator
+        - name: prod-aws
+        - name: secrets-prod
+        params:
+          BOSH_CLIENT: {{prod_bosh_client_id}}
+          BOSH_CLIENT_SECRET: {{prod_bosh_client_secret}}
+          BOSH_CA_CERT: {{prod_bosh_ca_cert}}
+          BOSH_ENVIRONMENT: {{prod_bosh_target}}
+          BOSH_DEPLOYMENT: scalablesyslog
+        run:
+          path: bash
+          args:
+            - -c
+            - |
+              #!/bin/bash
+              set -e
+
+              gem install secrets-sanitizer --no-rdoc --no-ri
+
+              SECRETS_DIR=$PWD/secrets-prod
+              LOGGREGATOR_VERSION=$(bosh int prod-aws/deployments/scalablesyslog.yml --path=/releases/name=loggregator/version)
+              SCALABLE_SYSLOG_VERSION=$(bosh int prod-aws/deployments/scalablesyslog.yml --path=/releases/name=scalablesyslog/version)
+
+              pushd loggregator
+                bosh upload-release "releases/loggregator/loggregator-$LOGGREGATOR_VERSION.yml"
+              popd
+
+              pushd scalable-syslog-release
+                bosh upload-release "releases/scalablesyslog/scalablesyslog-$SCALABLE_SYSLOG_VERSION.yml"
+              popd
+
+              pushd prod-aws/deployments
+                desanitize -f -i scalablesyslog.yml -s $SECRETS_DIR/deployments
+                bosh deploy scalablesyslog.yml -n
               popd
